<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rights alert</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    
    <string name="preferences_category_display">Display</string>
    <string name="preferences_sorting_title">Sorting</string>
    <string name="preferences_sorting_dialogtitle">Sort by…</string>
    <string-array name="preferences_sorting_array">
        <item>Name</item>
        <item>Score</item>
    </string-array>
    <string name="preferences_showsystemapps_title">System applications</string>
    <string name="preferences_showsystemapps_summary">Show system applications</string>
    <string name="preferences_category_score">Score calculation</string>
    <string name="preferences_coarselocation_dialogmessage">Allows an application to access coarse (e.g., Cell-ID, WiFi) location</string>
    <string name="preferences_coarselocation_title">Access coarse location</string>
    <string name="preferences_finelocation_dialogmessage">Allows an application to access fine (e.g., GPS) location </string>
    <string name="preferences_finelocation_title">Access fine location</string>
    <string name="preferences_batterystats_dialogmessage">Allows an application to collect battery statistics </string>
    <string name="preferences_batterystats_title">Battery stats</string>
    <string name="preferences_bluetooth_dialogmessage">Allows applications to connect to paired bluetooth devices </string>
    <string name="preferences_bluetooth_title">Bluetooth</string>
    <string name="preferences_bluetoothadmin_dialogmessage">Allows applications to discover and pair bluetooth devices </string>
    <string name="preferences_bluetoothadmin_title">Bluetooth admin</string>
    <string name="preferences_brick_dialogmessage">Required to be able to disable the device (very dangerous!)</string>
    <string name="preferences_brick_title">Brick</string>
    <string name="preferences_callphone_dialogmessage">Allows an application to initiate a phone call without going through the Dialer user interface for the user to confirm the call being placed.</string>
    <string name="preferences_callphone_title">Call phone</string>
    <string name="preferences_callprivileged_dialogmessage">Allows an application to call any phone number, including emergency numbers, without going through the Dialer user interface for the user to confirm the call being placed.</string>
    <string name="preferences_callprivileged_title">Call privileged</string>
    <string name="preferences_camera_dialogmessage">Required to be able to access the camera device.</string>
    <string name="preferences_camera_title">Camera</string>
    <string name="preferences_getaccounts_dialogmessage">Allows access to the list of accounts in the Accounts Service </string>
    <string name="preferences_getaccounts_title">Get accounts</string>
    <string name="preferences_internet_dialogmessage">Allows applications to open network sockets.</string>
    <string name="preferences_internet_title">Internet</string>
    <string name="preferences_manageaccounts_dialogmessage">Allows an application to manage the list of accounts in the AccountManager </string>
    <string name="preferences_manageaccounts_title">Manage accounts</string>
    <string name="preferences_readcalendar_dialogmessage">Allows an application to read the user\'s calendar data.</string>
    <string name="preferences_readcalendar_title">Read calendar</string>
    <string name="preferences_readcontacts_dialogmessage">Allows an application to read the user\'s contacts data.</string>
    <string name="preferences_readcontacts_title">Read contacts</string>
    <string name="preferences_readhistorybookmarks_dialogmessage">Allows an application to read (but not write) the user\'s browsing history and bookmarks.</string>
    <string name="preferences_readhistorybookmarks_title">Read history bookmarks</string>
    <string name="preferences_readphonestate_dialogmessage">Allows read only access to phone state.</string>
    <string name="preferences_readphonestate_title">Read phone state</string>
    <string name="preferences_readsms_dialogmessage">Allows an application to read SMS messages.</string>
    <string name="preferences_readsms_title">Read SMS</string>
    <string name="preferences_sendsms_dialogmessage">Allows an application to send SMS messages.</string>
    <string name="preferences_sendsms_title">Send SMS</string>
    <string name="preferences_alertthreshold_dialogmessage">Amount of points to be reached before an application is considered as dangerous.</string>
   	<string name="preferences_alertthreshold_title">Danger threshold</string>
    
    <string name="about_version">Version 0.3a</string>
    <string name="about_createdby">Created by Cyril Glapa</string>
    <string name="about_codesite"><a href="https://github.com/cglapa/rights-alert">Source code</a></string>
    <string name="about_translation"><a href="https://www.transifex.com/projects/p/rights-alert/">Translation platform</a></string>
    
    <string name="applist_loading">Loading applications…</string>
    <string name="applist_cancel">Cancel</string>
    <string name="applist_count">There are %1$d dangerous applications.</string>

</resources>